appId: com.example.maestro_flutter_poc

---

- launchApp

- assertVisible: "⚪ Aguardando clique"

- tapOn: "EXECUTAR"

- assertVisible: "🟢 Automação executada"